Add difficulty levels selection

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
 </head>
 <body>
     <h1>Catch me, if you can <span class="score">0</span></h1>
+    <div class="levels">
+        <div>
+            <input type="radio" name="level" id="easy">
+            <label for="easy">Easy</label>
+        </div>
+        <div>
+            <input type="radio" name="level" id="medium">
+            <label for="medium">Medium</label>
+        </div>
+        <div>
+            <input type="radio" name="level" id="hard">
+            <label for="hard">Hard</label>
+        </div>
+    </div>
 </body>
 </html>
