Add start button and default difficulty level

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Catch me, if you can <span class="score">0</span></h1>
     <div class="levels">
         <div>
-            <input type="radio" name="level" id="easy">
+            <input type="radio" name="level" id="easy" checked>
             <label for="easy">Easy</label>
         </div>
         <div>
@@ -20,6 +20,10 @@
             <input type="radio" name="level" id="hard">
             <label for="hard">Hard</label>
         </div>
+    </div>
+
+    <div class="controls">
+        <button class="start-btn" onclick="startGame()">Start!</button>
     </div>
 </body>
 </html>
