--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hole and Mole game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Catch me, if you can <span class="score">0</span></h1>
@@ -25,5 +26,34 @@
     <div class="controls">
         <button class="start-btn" onclick="startGame()">Start!</button>
     </div>
+
+    <div class="game">
+        <div class="hole hole1">
+            <div class="mole">
+            </div>
+        </div>
+        <div class="hole hole2">
+            <div class="mole">
+            </div>
+        </div>
+        <div class="hole hole3">
+            <div class="mole">
+            </div>
+        </div>
+        <div class="hole hole4">
+            <div class="mole">
+            </div>
+        </div>
+        <div class="hole hole5">
+            <div class="mole">
+            </div>
+        </div>
+        <div class="hole hole6">
+            <div class="mole">
+
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
