style: Fix missing semicolon in startGame button onclick event

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="controls">
-        <button class="start-btn" onclick="startGame()">Start!</button>
+        <button class="start-btn" onclick="startGame();">Start!</button>
     </div>
 
     <div class="game">
