--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 </html>
